--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,3 +10,4 @@ COPY default /etc/nginx/sites-available/default
 EXPOSE 443
 
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
+# ENTRYPOINT ["tail", "-f", "/dev/null"]
