--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
       - '9000'
     volumes:
       - wordpress-data:/app/wordpress
+  mariadb:
+    build: ./mariadb
+    expose:
+      - '3306'
+    volumes:
+      - mariadb-data:/var/lib/mysql
 
 volumes:
   wordpress-data:
