--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,21 @@ services:
       - '443:443'
     volumes:
       - wordpress-data:/app/wordpress
+    restart: on-failure
   wordpress:
     build: ./wordpress
     expose:
       - '9000'
     volumes:
       - wordpress-data:/app/wordpress
+    restart: on-failure
   mariadb:
     build: ./mariadb
     expose:
       - '3306'
     volumes:
       - mariadb-data:/var/lib/mysql
+    restart: on-failure
 
 volumes:
   wordpress-data:
