--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -10,17 +10,21 @@ services:
     volumes:
       - wordpress-data:/app/wordpress
     restart: on-failure
+    networks:
+      - compose-bridge
 
   wordpress:
     depends_on:
       - mariadb
-      - redis
+      # - redis
     build: ./wordpress
     expose:
       - '9000'
     volumes:
       - wordpress-data:/app/wordpress
     restart: on-failure
+    networks:
+      - compose-bridge
 
   mariadb:
     build: ./mariadb
@@ -29,24 +33,30 @@ services:
     volumes:
       - mariadb-data:/var/lib/mysql
     restart: on-failure
+    networks:
+      - compose-bridge
 
-  redis:
-    build: ./redis
-    expose:
-      - '6379'
-    restart: on-failure
-    healthcheck:
-      test: ["CMD", "redis-cli","ping"]
+  # redis:
+  #   build: ./redis
+  #   expose:
+  #     - '6379'
+  #   restart: on-failure
+  #   healthcheck:
+  #     test: ["CMD", "redis-cli","ping"]
+  # networks:
+  #   - compose-bridge
 
-  ftp:
-    depends_on:
-      - wordpress
-    build: ./ftp
-    ports:
-      - '21:21'
-    restart: on-failure
-    volumes:
-      - wordpress-data:/home/ftpuser/wordpress
+  # ftp:
+  #   depends_on:
+  #     - wordpress
+  #   build: ./ftp
+  #   ports:
+  #     - '21:21'
+  #   restart: on-failure
+  #   volumes:
+  #     - wordpress-data:/home/ftpuser/wordpress
+  # networks:
+  #   - compose-bridge
 
   adminer:
     depends_on:
@@ -55,6 +65,8 @@ services:
     ports:
       - '4242:80'
     restart: on-failure
+    networks:
+      - compose-bridge
 
 volumes:
   wordpress-data:
