update Makefile creation in hosts file

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -35,6 +35,8 @@ services:
     restart: on-failure
     networks:
       - compose-bridge
+    environment:
+      - PASSWORD=${PASSWORD}
 
   # redis:
   #   build: ./redis
