--- a/srcs/ftp/Dockerfile
+++ b/srcs/ftp/Dockerfile
@@ -6,12 +6,10 @@ RUN apt-get update
 
 RUN apt-get install vsftpd -y
 
-RUN useradd -m -s /bin/bash $USER && \
-    echo "$USER:$USER" | chpasswd && \
-    service vsftpd start
+COPY ./init.sh .
 
 COPY vsftpd.conf /etc/vsftpd.conf
 
 EXPOSE 21
 
-ENTRYPOINT ["vsftpd", "/etc/vsftpd.conf"]
+ENTRYPOINT ["bash", "init.sh"]
